<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OnboardingActivity">


    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/train_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:background="@color/inOnboarding"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboarding_title"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/onboarding_subtitle"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:backgroundTint="@color/primary"
                android:paddingVertical="10dp"
                android:text="@string/onboarding_buttontitle"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/bottomtext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/bottomtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvLoginLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:textSize="14sp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>